--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>3.1.0</version>
                 <configuration>
-                    <mainClass>WaterPaymentApp</mainClass>
+                    <mainClass>GuiCalculator</mainClass>
                 </configuration>
             </plugin>
         </plugins>
