Add CodeQL initialization and analysis steps

--- a/.github/workflows/calculatarrr.yml
+++ b/.github/workflows/calculatarrr.yml
@@ -19,6 +19,14 @@ jobs:
         with:
           distribution: temurin
           java-version: 17
+          
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@v3
+        with:
+          languages: java
+
+      - name: Perform CodeQL Analysis
+        uses: github/codeql-action/analyze@v3
 
       - name: Build project
         run: |
