--- a/.github/workflows/calculatarrr.yml
+++ b/.github/workflows/calculatarrr.yml
@@ -7,33 +7,29 @@ on:
     branches: [ main ]
 
 jobs:
+  codeql-analysis:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        language: [ 'java' ]
+    steps:
+      - uses: actions/checkout@v4
+      - uses: github/codeql-action/init@v3
+        with:
+          languages: ${{ matrix.language }}
+      - uses: github/codeql-action/autobuild@v3
+      - uses: github/codeql-action/analyze@v3
+
   build-test:
     runs-on: windows-latest
-
+    needs: codeql-analysis
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Java
-        uses: actions/setup-java@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: 17
-          
-      - name: Initialize CodeQL
-        uses: github/codeql-action/init@v3
-        with:
-          languages: java
-
-      - name: Perform CodeQL Analysis
-        uses: github/codeql-action/analyze@v3
-
-      - name: Build project
-        run: |
-          mvn -B clean package
-          mvn exec:java
-      - name: Run tests
-        run: mvn test
+      - run: mvn clean verify  # build + test
 
   deploy:
     needs: build-test
