--- a/.github/workflows/calculatarrr.yml
+++ b/.github/workflows/calculatarrr.yml
@@ -8,8 +8,14 @@ on:
 
 jobs:
   codeql-analysis:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
+    permissions:
+      actions: read
+      contents: read
+      security-events: write
+
     strategy:
+      fail-fast: false
       matrix:
         language: [ 'java' ]
     steps:
