--- a/.github/workflows/calculatarrr.yml
+++ b/.github/workflows/calculatarrr.yml
@@ -6,7 +6,9 @@ on:
   pull_request:
     branches: [ main ]
 
-analyze:
+jobs:
+
+  analyze:
     name: Analyze
     runs-on: windows-latest
     permissions:
@@ -18,28 +20,27 @@ analyze:
       fail-fast: false
       matrix:
         language: [ 'java' ]
-        # CodeQL supports [ 'cpp', 'csharp', 'go', 'java', 'javascript', 'python', 'ruby' ]
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-    - name: Initialize CodeQL
-      uses: github/codeql-action/init@v2
-      with:
-        languages: ${{ matrix.language }}
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@v3
+        with:
+          languages: ${{ matrix.language }}
 
-    - name: Autobuild
-      uses: github/codeql-action/autobuild@v2
+      - name: Autobuild
+        uses: github/codeql-action/autobuild@v3
 
-    - name: Perform CodeQL Analysis
-      uses: github/codeql-action/analyze@v2
-      with:
-        category: "/language:${{matrix.language}}"
+      - name: Perform CodeQL Analysis
+        uses: github/codeql-action/analyze@v3
+        with:
+          category: "/language:${{ matrix.language }}"
 
   build-test:
     runs-on: windows-latest
-    needs: codeql-analysis
+    needs: analyze
 
     steps:
       - uses: actions/checkout@v4
