--- a/.github/workflows/calculatarrr.yml
+++ b/.github/workflows/calculatarrr.yml
@@ -66,48 +66,58 @@ jobs:
   # Cleanup Job
   # --------------------------
   cleanup:
-    name: Cleanup Deployment
-    runs-on: windows-latest
     needs: [build]
+    runs-on: windows-latest
     environment: UAT
 
     steps:
-      - name: Cleanup destination at ${{ vars.UAT_IP }}
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ vars.UAT_IP }}
-          port: ${{ vars.UAT_PORT }}
-          username: ${{ secrets.USER }}
-          key: ${{ secrets.SSH_KEY }}
-          script: |
-            rm -rf ./deployment/*
-            rm -rf ${{ vars.UAT_TOMCAT }}/digi*
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Cleanup destination folder on remote server
+        shell: pwsh
+        run: |
+          # Create a temporary script for SSH
+          $script = @"
+          rm -rf ./deployment/*
+          rm -rf $env:UAT_TOMCAT/digi*
+          "@
+          # Run SSH command
+          ssh -i $env:SSH_KEY -p $env:UAT_PORT $env:USER@$env:UAT_IP $script
+        env:
+          UAT_IP: ${{ vars.UAT_IP }}
+          UAT_PORT: ${{ vars.UAT_PORT }}
+          USER: ${{ secrets.USER }}
+          SSH_KEY: ${{ secrets.SSH_KEY }}
+          UAT_TOMCAT: ${{ vars.UAT_TOMCAT }}
 
   # --------------------------
   # Deploy Job
   # --------------------------
   deploy:
-    name: Deploy Application
-    runs-on: windows-latest
     needs: [cleanup]
+    runs-on: windows-latest
     environment: UAT
 
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
       - name: Download artifact
-        uses: actions/download-artifact@v2
+        uses: actions/download-artifact@v3
         with:
-          name: digibank.jar
+          name: digibank.war
           path: ./deploy
 
-      - name: List deploy folder
-        run: ls -ltr ./deploy
+      - name: List downloaded artifact
+        run: dir ./deploy
 
-      - name: Deploy to server
-        uses: appleboy/scp-action@master
-        with:
-          host: ${{ vars.UAT_IP }}
-          port: ${{ vars.UAT_PORT }}
-          username: ${{ secrets.USER }}
-          key: ${{ secrets.SSH_KEY }}
-          source: './deploy/digibank.jar'
-          target: 'deployment'
+      - name: Copy artifact to remote server
+        shell: pwsh
+        run: |
+          scp -i $env:SSH_KEY -P $env:UAT_PORT ./deploy/digibank.war $env:USER@$env:UAT_IP:deployment/
+        env:
+          UAT_IP: ${{ vars.UAT_IP }}
+          UAT_PORT: ${{ vars.UAT_PORT }}
+          USER: ${{ secrets.USER }}
+          SSH_KEY: ${{ secrets.SSH_KEY }}
