--- a/.github/workflows/calculatarrr.yml
+++ b/.github/workflows/calculatarrr.yml
@@ -7,47 +7,9 @@ on:
     branches: [ main ]
 
 jobs:
-
-  # --------------------------
-  # CodeQL Analysis Job
-  # --------------------------
-  analyze:
-    name: Analyze
-    runs-on: windows-latest
-    permissions:
-      actions: read
-      contents: read
-      security-events: write
-
-    strategy:
-      fail-fast: false
-      matrix:
-        language: [ 'java' ]
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Initialize CodeQL
-        uses: github/codeql-action/init@v3
-        with:
-          languages: ${{ matrix.language }}
-
-      - name: Autobuild
-        uses: github/codeql-action/autobuild@v3
-
-      - name: Perform CodeQL Analysis
-        uses: github/codeql-action/analyze@v3
-        with:
-          category: "/language:${{ matrix.language }}"
-
-  # --------------------------
-  # Build and Test Job
-  # --------------------------
   build:
-    name: Build & Test
+    name: Build Maven Project
     runs-on: windows-latest
-    needs: analyze
 
     steps:
       - name: Checkout code
@@ -59,65 +21,56 @@ jobs:
           distribution: temurin
           java-version: 17
 
-      - name: Build & Test with Maven
-        run: mvn clean verify
+      - name: Build WAR
+        run: mvn clean package
 
-  # --------------------------
-  # Cleanup Job
-  # --------------------------
-  cleanup:
-    needs: [build]
-    runs-on: windows-latest
-    environment: UAT
+      - name: Upload artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: calculator
+          path: target/calculator.war
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Cleanup destination folder on remote server
-        shell: pwsh
-        run: |
-          # Create a temporary script for SSH
-          $script = @"
-          rm -rf ./deployment/*
-          rm -rf $env:UAT_TOMCAT/digi*
-          "@
-          # Run SSH command
-          ssh -i $env:SSH_KEY -p $env:UAT_PORT $env:USER@$env:UAT_IP $script
-        env:
-          UAT_IP: ${{ vars.UAT_IP }}
-          UAT_PORT: ${{ vars.UAT_PORT }}
-          USER: ${{ secrets.USER }}
-          SSH_KEY: ${{ secrets.SSH_KEY }}
-          UAT_TOMCAT: ${{ vars.UAT_TOMCAT }}
-
-  # --------------------------
-  # Deploy Job
-  # --------------------------
   deploy:
-    needs: [cleanup]
-    runs-on: windows-latest
+    name: Deploy to Tomcat
+    runs-on: ubuntu-latest
+    needs: build
     environment: UAT
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Download artifact
+      - name: Download WAR artifact
         uses: actions/download-artifact@v3
         with:
-          name: digibank.jar
+          name: calculator
           path: ./deploy
 
-      - name: List downloaded artifact
-        run: dir ./deploy
+      - name: Cleanup remote Tomcat folder
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ vars.UAT_IP }}
+          port: ${{ vars.UAT_PORT }}
+          username: ${{ secrets.USER }}
+          key: ${{ secrets.SSH_KEY }}
+          script: |
+            echo "Cleaning Tomcat deployment folder..."
+            rm -rf ${{ vars.UAT_TOMCAT }}/calculator*
+      
+      - name: Deploy WAR to Tomcat
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ vars.UAT_IP }}
+          port: ${{ vars.UAT_PORT }}
+          username: ${{ secrets.USER }}
+          key: ${{ secrets.SSH_KEY }}
+          source: './deploy/calculator.war'
+          target: '${{ vars.UAT_TOMCAT }}/'
 
-      - name: Copy artifact to remote server
-        shell: pwsh
-        run: |
-          scp -i $env:SSH_KEY -P $env:UAT_PORT ./deploy/digibank.war $env:USER@$env:UAT_IP:deployment/
-        env:
-          UAT_IP: ${{ vars.UAT_IP }}
-          UAT_PORT: ${{ vars.UAT_PORT }}
-          USER: ${{ secrets.USER }}
-          SSH_KEY: ${{ secrets.SSH_KEY }}
+      - name: Verify deployment
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ vars.UAT_IP }}
+          port: ${{ vars.UAT_PORT }}
+          username: ${{ secrets.USER }}
+          key: ${{ secrets.SSH_KEY }}
+          script: |
+            echo "Listing deployed files..."
+            ls -l ${{ vars.UAT_TOMCAT }}
