--- a/.github/workflows/calculatarrr.yml
+++ b/.github/workflows/calculatarrr.yml
@@ -32,7 +32,7 @@ jobs:
 
   deploy:
     name: Deploy to Tomcat
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     needs: build
     environment: UAT
 
